# goit-web-hw-module-4

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml
html_files/: index.html  message.html
storage/: data.json
web_service/: main.py  server_HTTP.py  server_UDP.py  web_server.py
web_service/html_files/: index.html  message.html
web_service/storage/: data.json
